--- a/Processing.html
+++ b/Processing.html
@@ -10,10 +10,53 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="Processing.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.css" />
+  <style>
+    .popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 999;
+    }
+
+    .popup-content {
+      background-color: #fff;
+      width: 300px;
+      margin: 100px auto;
+      padding: 20px;
+      border-radius: 5px;
+      text-align: center;
+    }
+
+    .popup-content img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
+
+    .popup-content p {
+      margin-bottom: 10px;
+    }
+
+    .popup-content button {
+      margin-top: 10px;
+    }
+  </style>
+  <script>
+    function togglePopup() {
+      var popup = document.getElementById("popup");
+      popup.style.display = popup.style.display === "none" ? "block" : "none";
+    }
+  </script>
 </head>
+
 <body>
   <div class="app">
     <div class="container">
@@ -26,11 +69,9 @@
         </div>
 
         <div class="btn-item-collect col-md-3 d-flex ">
-        <a type="button" class="btn btn-primary ms-auto" href="">
-            Thêm lịch khám
-        </a>
-       </div>
-    </div>
+          <a type="button" class="btn btn-primary ms-auto" href="#" onclick="togglePopup()">Thêm lịch khám</a>
+        </div>
+      </div>
 
       <div class="row">
         <table class="table table-hover">
@@ -47,6 +88,32 @@
           <tbody>
           </tbody>
         </table>
+      </div>
     </div>
   </div>
+
+  <div id="popup" class="popup">
+    <div class="popup-content">
+      <img src="images/avatar.jpg" alt="Patient Image">
+      <p><strong>Tên bệnh nhân:</strong> John Doe</p>
+      <p><strong>Mã bệnh nhân:</strong> ABC123</p>
+      <p><strong>Giới tính:</strong> Nam</p>
+      <p><strong>Ngày sinh:</strong> 123456789</p>
+      <p><strong>Số điện thoại:</strong> 123456789</p>
+      <p><strong>Email:</strong> XYZ Service</p>
+      <p><strong>Địa chỉ:</strong> XYZ Service</p>
+      <p><strong>Ghi chú:</strong> XYZ Service</p>
+      <p><strong>Dịch vụ khám:</strong> XYZ Service</p>
+      <p><strong>Siêu âm:</strong> <span id="ultrasoundQuantity">1</span> <input type="number" id="ultrasoundInput" min="1" value="1"></p>
+      <p><strong>Tên thuốc:</strong> <span id="medicineQuantity">1</span> <input type="number" id="medicineInput" min="1" value="1"></p>
+   
+      
+      <button onclick="updateRecord()">Cập nhật</button>
+      <button onclick="stopWorking()">Ngừng hoạt động</button>
+      <button onclick="deleteRecord()">Xóa</button>
+      <button onclick="togglePopup()">Đóng</button>
+    </div>
+  </div>
+</body>
+
 </html>
