--- a/Processing.html
+++ b/Processing.html
@@ -69,7 +69,7 @@
         </div>
 
         <div class="btn-item-collect col-md-3 d-flex ">
-          <a type="button" class="btn btn-primary ms-auto" href="#" onclick="togglePopup()">Thêm lịch khám</a>
+          <a type="button" class="btn btn-primary ms-auto" href="#" onclick="togglePopup()">Cập nhật lịch khám</a>
         </div>
       </div>
 
