--- a/Processing.html
+++ b/Processing.html
@@ -32,9 +32,16 @@
           </form>
         </div>
 
-        <div class="btn-item-collect col-md-3 d-flex ">
-          <a type="button" class="btn btn-primary ms-auto" href="#" onclick="togglePopup()">Cập nhật lịch khám</a>
-        </div>
+        <div class="btn-item-collect col-md-4 d-flex ">
+        <a class="btn btn-primary ms-auto" href="">
+          Thêm lịch khám
+        </a>
+
+        <a class="btn btn-primary report-option-spend" href="">
+          Cập nhật lịch khám
+        </a>
+       </div>
+        
       </div>
 
       <div class="row">
